--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,13 @@ table {
     width: 40px;
     height: 40px;
     text-align: center;
+    background-color: cyan;
 }
 
-.cell img {
+/* .cell img {
     width: 25px;
-    height: auto;
-}
+    height: auto; */
+/* } */
 
 .modal {
     background-color: black;
@@ -60,3 +61,7 @@ span {
     position: fixed;
 }
 
+.clicked {
+    background-color: rgb(207, 103, 91);
+    color: white;
+}
